# edgejs

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  README.md  WASIX_TODO.md  flake.nix  install.sh
.github/workflows/: napi-v8.yml  napi-wasmer.yml  test-and-build.yml
bin-compat/: node
napi-external/guest/tests/: manifest.json
napi-external/host/src/: lib.rs  napi_bridge_init.cc
napi-v8/: CMakeLists.txt
napi-v8/include/: js_native_api.h
napi-v8/scripts/: test-local-v8.sh
napi-v8/src/: js_native_api_v8.cc  node_api_v8.cc  unofficial_napi.cc
napi-v8/src/internal/: napi_v8_env.h
napi-v8/tests/: CMakeLists.txt  PORTABILITY_MATRIX.md  tier1_ported_runner.cc
napi-v8/tests/ported/js-native-api/: common.h
napi-v8/tests/ported/js-native-api/4_object_factory/: 4_object_factory.c
napi-v8/tests/ported/js-native-api/5_function_factory/: 5_function_factory.c
napi-v8/tests/ported/js-native-api/7_factory_wrap/: 7_factory_wrap.cc  myobject.cc  myobject.h
napi-v8/tests/ported/js-native-api/8_passing_wrapped/: 8_passing_wrapped.cc  myobject.cc  myobject.h
napi-v8/tests/runners/: test_10_number.cc  test_15_function.cc  test_16_reference.cc  test_18_conversions.cc  test_23_instance_data_ref_then_set.cc  test_24_instance_data_set_then_ref.cc  test_30_date.cc  test_31_dataview.cc  test_32_sharedarraybuffer.cc  test_33_typedarray.cc  test_41_instance_data.cc  test_43_node_hello_world.cc  test_44_node_async_cleanup_hook.cc  test_54_node_make_callback.cc  test_55_node_make_callback_recurse.cc  test_56_node_reference_by_api_v9.cc  test_57_node_reference_by_api_v10.cc
napi/include/: js_native_api.h  node_api.h  unofficial_napi.h
napi/v8/: CMakeLists.txt
napi/v8/scripts/: test-local-v8.sh
napi/v8/src/: js_native_api_v8.cc  ubi_v8_platform.cc  ubi_v8_platform.h  unofficial_napi.cc  unofficial_napi_contextify.cc
napi/wasmer/: Cargo.toml  build.rs  server1.js  stdio-info.json  test-stderr-write.js  test-stdio-introspect.js  test2.js
napi/wasmer/src/: ctx.rs  env.rs  lib.rs  main.rs  module.rs  napi_bridge_init.cc  snapi.rs  wasix.rs
napi/wasmer/src/guest/: callback.rs  napi.rs
plans/: framework-integration-tests.md
scripts/: framework-test.js
src/: edge_cli.cc  edge_environment.cc  edge_environment_runtime.cc  edge_http_parser.cc  edge_js_stream.cc  edge_module_loader.cc  edge_pipe_wrap.cc  edge_process.cc  edge_runtime.cc  edge_runtime.h  edge_stream_base.cc  edge_tcp_wrap.cc  edge_timers_host.cc  edge_tls_wrap.cc
src/crypto/: edge_crypto_binding.cc
src/internal_binding/: binding_crypto.cc  binding_fs.cc  binding_http2.cc  binding_messaging.cc  binding_stream_pipe.cc  binding_worker.cc
tests/runners/: test_1_cli_phase01.cc
ubi/: CMakeLists.txt  README.md
ubi/cmake/: generate_builtin_ids.py  wasix-libuv-compat.h  wasix-toolchain.cmake  wasixccxx-c++20
ubi/scripts/: build-wasix.sh  setup-wasix-deps.sh
ubi/src/: builtin_catalog.cc  node_api.cc  ubi_async_wrap.cc  ubi_async_wrap.h  ubi_cares_wrap.cc  ubi_cli.cc  ubi_encoding.cc  ubi_env_loop.h  ubi_errors_binding.cc  ubi_errors_binding.h  ubi_fs.cc  ubi_handle_wrap.cc  ubi_handle_wrap.h  ubi_js_stream.cc  ubi_main.cc  ubi_module_loader.cc  ubi_module_loader.h  ubi_os.cc  ubi_pipe_wrap.cc  ubi_process.cc  ubi_process_wrap.cc  ubi_runtime.cc  ubi_runtime.h  ubi_runtime_platform.h  ubi_runtime_platform_v8.cc  ubi_signal_wrap.cc  ubi_spawn_sync.cc  ubi_stream_base.cc  ubi_stream_base.h  ubi_stream_wrap.cc  ubi_stream_wrap.h  ubi_task_queue.cc  ubi_tcp_wrap.cc  ubi_timers_host.cc  ubi_tls_wrap.cc  ubi_tty_wrap.cc  ubi_udp_wrap.cc  ubi_url.cc  ubi_url_pattern.cc  ubi_util.cc  (+4 more)
ubi/tests/: CMakeLists.txt
ubi/tests/node-compat/common/: index.js
ubi/tests/runners/: test_1_cli_phase01.cc  test_3_node_dropin_subset_phase02.cc  test_5_internal_binding_parity_phase03.cc
unode/: CMakeLists.txt
unode/scripts/: test-local-v8.sh
unode/src/: unode_buffer.cc  unode_cares_wrap.cc  unode_encoding.cc  unode_encoding.h  unode_encoding_ids.h  unode_fs.cc  unode_fs.h  unode_module_loader.cc  unode_module_loader.h  unode_runtime.cc  unode_runtime.h  unode_spawn_sync.cc  unode_string_decoder.cc  unode_string_decoder.h  unode_url.cc  unode_url.h  unode_util.cc
unode/src/builtins/: assert.js  buffer.js  child_process.js  internal_test_binding.js  module.js  os.js  punycode.js  querystring.js  repl.js  string_decoder.js  test.js  url.js  vm.js  zlib.js
unode/src/builtins/internal/: buffer.js  child_process.js  constants.js  errors.js  querystring.js  repl.js  url.js  util.js  uv_errmap.js
unode/src/builtins/internal/bootstrap/: internal_binding.js  realm.js
unode/src/builtins/internal/repl/: await.js
unode/src/builtins/internal/test/: binding.js  binding_runtime.js
unode/src/builtins/internal/util/: primordials.js
unode/src/crypto/: unode_crypto_binding.cc
unode/tests/: CMakeLists.txt
unode/tests/fixtures/: phase0_hello.js
unode/tests/node-compat/: DELTA_NOTES.md  FS_IMPLEMENTATION_PLAN.md  NEXT_STEPS_RAW.md
unode/tests/node-compat/builtins/: assert.js  buffer.js  console.js  fs.js  module.js  net.js  path.js  stream.js  test.js  url.js  util.js  vm.js  worker_threads.js
unode/tests/node-compat/common/: arraystream.js  assert.js  fixtures.js  hijackstdio.js  index.js  path.js  repl.js
unode/tests/node-compat/fixtures/: a.js  foo  fs_sync_test.js  require_node_modules_test.js
unode/tests/node-compat/fixtures/b/: c.js  d.js
unode/tests/node-compat/fixtures/nested-index/: three.js
unode/tests/node-compat/fixtures/nested-index/one/: hello.js
unode/tests/node-compat/fixtures/nested-index/three/: index.js
unode/tests/node-compat/fixtures/nested-index/two/: hello.js
unode/tests/node-compat/parallel/: test-buffer-base64-hardening.js  test-console-assign-undefined.js  test-console-clear.js  test-console-group.js  test-console-instance.js  test-console-methods.js  test-console-table.js  test-console.js  test-module-loading-subset.js
unode/tests/runners/: test_0_runtime_phase01.cc  test_1_cli_phase01.cc  test_2_module_loader_phase02.cc  test_3_node_dropin_subset_phase02.cc
(+50 files in other folders)
