[package]
name = "napi_wasmer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasmer = { version = "=7.0.1", features = ["llvm"] }
wasmer-compiler-llvm = "=7.0.1"
wasmer-types = "=7.0.1"
wasmer-wasix = "0.700.1"
virtual-fs = "0.700.1"
virtual-mio = "0.700.1"
wasmer-cache = "7.0.1"

[build-dependencies]
cc = "1"
