[package]
name = "napi_wasmer"
version = "0.0.1"
edition = "2024"
description = "Wasmer NAPI integration"
license = "MIT OR Apache-2.0"

[features]
default = ["wasix"]
wasix = ["dep:wasmer-wasix"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Published crates variant:
wasmer = { version = "*", features = ["llvm"] }
wasmer-compiler-llvm = { version = "*" }
wasmer-types = { version = "*" }
wasmer-wasix = { version = "*", optional = true }
virtual-fs = { version = "*" }
virtual-mio = { version = "*" }
wasmer-cache = { version = "*" }

# Git dependency on wasmer main:
# wasmer = { git = "https://github.com/wasmerio/wasmer", branch ="napi", features = ["llvm"] }
# wasmer-compiler-llvm = { git = "https://github.com/wasmerio/wasmer", branch ="napi" }
# wasmer-types = { git = "https://github.com/wasmerio/wasmer", branch ="napi" }
# wasmer-wasix = { git = "https://github.com/wasmerio/wasmer", branch ="napi", optional = true }
# virtual-fs = { git = "https://github.com/wasmerio/wasmer", branch ="napi" }
# virtual-mio = { git = "https://github.com/wasmerio/wasmer", branch ="napi" }
# wasmer-cache = { git = "https://github.com/wasmerio/wasmer", branch ="napi" }

# Local path variant:
# wasmer = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/api", features = ["llvm"] }
# wasmer-compiler-llvm = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/compiler-llvm" }
# wasmer-types = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/types" }
# wasmer-wasix = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/wasix", optional = true }
# virtual-fs = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/virtual-fs" }
# virtual-mio = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/virtual-io" }
# wasmer-cache = { path = "/home/theduke/dev/github.com/wasmerio/wasmer/lib/cache" }

[build-dependencies]
cc = "1"
